@@ -19,14 +19,16 @@ import java.util.stream.Collectors;
 @Service
 public class WorkflowUtil {
 
-	@Autowired
-	private ServiceRequestRepository repository;
+	private final ServiceRequestRepository repository;
+	private final ObjectMapper mapper;
+	private final Configuration configs;
 
 	@Autowired
-	private ObjectMapper mapper;
-
-	@Autowired
-	private Configuration configs;
+	public WorkflowUtil(ServiceRequestRepository repository, ObjectMapper mapper, Configuration configs) {
+		this.repository = repository;
+		this.mapper = mapper;
+		this.configs = configs;
+	}
 
 	/**
 	 * Searches the BussinessService corresponding to the businessServiceCode
@@ -142,18 +144,23 @@ public class WorkflowUtil {
 	 * @return
 	 */
 	public Map<String, Workflow> getWorkflow(List<ProcessInstance> processInstances) {
-
 		Map<String, Workflow> businessIdToWorkflow = new HashMap<>();
 
 		processInstances.forEach(processInstance -> {
 			List<String> userIds = null;
 
 			if (!CollectionUtils.isEmpty(processInstance.getAssignes())) {
-				userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
+				userIds = processInstance.getAssignes().stream()
+						.map(User::getUuid)
+						.toList();  // Replaced collect(Collectors.toList()) with toList()
 			}
 
-			Workflow workflow = Workflow.builder().action(processInstance.getAction()).assignes(userIds)
-					.comments(processInstance.getComment()).documents(processInstance.getDocuments()).build();
+			Workflow workflow = Workflow.builder()
+					.action(processInstance.getAction())
+					.assignes(userIds)
+					.comments(processInstance.getComment())
+					.documents(processInstance.getDocuments())
+					.build();
 
 			businessIdToWorkflow.put(processInstance.getBusinessId(), workflow);
 		});
